--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@ elements2.forEach(fader => {
             &nbsp; &nbsp; &nbsp; <a href="Contact.html"> CONTACT </a> </h2>
         <!-- <h2 style = "text-align: center; display: inline;"> AWARDS </h2> -->
     </div>
+    <script src="Home.js"></script>
 </body>
 
 </html>
