added js animations

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@ elements2.forEach(fader => {
             overflow: scroll;
         }
 
-
         .title {
             margin-top: 2vh;
             margin-bottom: 2vh;
@@ -358,17 +357,13 @@ elements2.forEach(fader => {
             font-family: 'Raleway', sans-serif;
             font-family: 'Roboto Condensed', sans-serif;
             color: #FB8500;
-            font-size: 5em;
-            animation: loopText 7s infinite linear; 
+            font-size: 1.5em;
+            /*animation: loopText 7s infinite linear;*/ 
+            /*animation: fadeIn 4s 3s infinite;*/ 
             text-align: center;
             margin-bottom: 10vh;
+            opacity: 0; 
         }
-
-        @keyframes loopText{
-            from { transform: translateX(0%); }
-            to { transform: translateX(-100%); }
-        }
-
        
         /*.image{
             margin-left: 2.5vw;
@@ -382,8 +377,7 @@ elements2.forEach(fader => {
         &nbsp; &nbsp; &nbsp; <a href="Contact.html"> CONTACT </a> </h4>
     <h3 style="text-align: center"> Hello! I am </h3>
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
-    <div class="roles" style="opacity: 0;"> Engineer </div>
-
+    <div class = "roles"> A.I.-Nerd Engineer Student Developer Equity-Activist Tech-Enthusiast</div>
     <div class="container fade-in1 left-oriented" style="width: 55vw;">
         <h2> ABOUT ME </h2>
         <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
