--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;800&family=Poppins&family=Raleway:wght@300;400&family=Roboto+Condensed&display=swap"
         rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/fa913dc807.js" crossorigin="anonymous"></script>
     <!-- <script>
         const elements = document.querySelectorAll('.fade-in1');
 
@@ -195,7 +195,7 @@ elements2.forEach(fader => {
             font-family: 'Raleway', sans-serif;
             font-size: 1.6em;
             opacity: 0;
-            animation: fadeIn 4s 3s forwards; 
+            animation: fadeIn 4s 3s forwards;
         }
 
         @keyframes fadeIn {
@@ -319,6 +319,7 @@ elements2.forEach(fader => {
             margin-right: 5vw;
             float: center;
             margin-left: 5vw;
+            text-align: center;
         }
 
         .center:hover {
@@ -349,7 +350,7 @@ elements2.forEach(fader => {
             text-decoration: none;
         }
 
-     
+
 
         .roles {
             font-family: 'Dosis', sans-serif;
@@ -358,26 +359,36 @@ elements2.forEach(fader => {
             font-family: 'Roboto Condensed', sans-serif;
             color: #FB8500;
             font-size: 1.5em;
-            /*animation: loopText 7s infinite linear;*/ 
-            /*animation: fadeIn 4s 3s infinite;*/ 
+            /*animation: loopText 7s infinite linear;*/
+            /*animation: fadeIn 4s 3s infinite;*/
             text-align: center;
             margin-bottom: 10vh;
-            opacity: 0; 
+            opacity: 0;
         }
-       
-        /*.image{
-            margin-left: 2.5vw;
-        } */
+
+        .fa:hover {
+            color:#023047; 
+        }
+        .fa-instagram {
+            color: #FFB703;
+        }
+        .fa-linkedin {
+            color: #FFB703;
+        }
+        .fa-google {
+            color: #FFB703;
+        }
+
     </style>
 </head>
 
 
 <body>
     <h4> <a href="Projects.html"> PROJECTS </a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="Awards.html"> HONORS </a> &nbsp;
-        &nbsp; &nbsp; &nbsp; <a href="Contact.html"> CONTACT </a> </h4>
+        &nbsp; &nbsp; &nbsp; <a href="#Contact"> CONTACT </a> </h4>
     <h3 style="text-align: center"> Hello! I am </h3>
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
-    <div class = "roles"> A.I.-Nerd Engineer Student Developer Equity-Activist Tech-Enthusiast</div>
+    <div class="roles"> A.I.-Nerd Engineer Student Developer Equity-Activist Tech-Enthusiast</div>
     <div class="container fade-in1 left-oriented" style="width: 55vw;">
         <h2> ABOUT ME </h2>
         <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
@@ -391,7 +402,7 @@ elements2.forEach(fader => {
     </div>
 
     <div class="container fade-in2"> <img src="dec5famsh4.jpeg"
-            style= "width: 27vw; height: 37.5em; margin-right: 5vw; margin-left: 1.5vw"> </div>
+            style="width: 27vw; height: 37.5em; margin-right: 5vw; margin-left: 1.5vw"> </div>
 
 
     <div class="fade-in2 right-oriented">
@@ -416,12 +427,13 @@ elements2.forEach(fader => {
     </div>
 
     <br>
-    <div class="fade-in2 center">
-        <h2 style="text-align: center; "> <a href="Projects.html"> PROJECTS </a> &nbsp; &nbsp; &nbsp; &nbsp; <a
-                href="Awards.html"> HONORS </a> &nbsp;
-            &nbsp; &nbsp; &nbsp; <a href="Contact.html"> CONTACT </a> </h2>
-        <!-- <h2 style = "text-align: center; display: inline;"> AWARDS </h2> -->
-    </div>
+    <div class="fade-in2 center fa-3x">
+        <h2 style ="text-align: center; font-size: 1em;" id = "Contact"> Let's Connect <br> </h2> 
+        <i class="fab fa-instagram fa-bounce fa-2x" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;" ></i>
+        &nbsp; &nbsp; &nbsp; &nbsp;
+        <i class="fab fa-align-center fa-linkedin fa-bounce fa-2x"></i>
+        &nbsp; &nbsp; &nbsp; &nbsp;
+        <i class="fa-brands fa-google fa-bounce fa-2x" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;"></i>
 
     <script src="Home.js"> </script>
 </body>
