--- a/index.html
+++ b/index.html
@@ -359,8 +359,6 @@ elements2.forEach(fader => {
             font-family: 'Roboto Condensed', sans-serif;
             color: #FB8500;
             font-size: 1.5em;
-            /*animation: loopText 7s infinite linear;*/
-            /*animation: fadeIn 4s 3s infinite;*/
             text-align: center;
             margin-bottom: 10vh;
             opacity: 0;
@@ -376,6 +374,9 @@ elements2.forEach(fader => {
             color: #FFB703;
         }
         .fa-google {
+            color: #FFB703;
+        }
+        .fa-github {
             color: #FFB703;
         }
 
@@ -429,10 +430,11 @@ elements2.forEach(fader => {
     <br>
     <div class="fade-in2 center fa-3x">
         <h2 style ="text-align: center; font-size: 1em;" id = "Contact"> Let's Connect <br> </h2> 
-        <i class="fab fa-instagram fa-bounce fa-2x" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;" ></i>
+        <i class="fab fa-instagram fa-bounce fa-2x" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;" > </i>
         &nbsp; &nbsp; &nbsp; &nbsp;
-        <i class="fab fa-align-center fa-linkedin fa-bounce fa-2x"></i>
+        <a href="https://www.linkedin.com/in/shriya-biddala/"> <i class="fab fa-align-center fa-linkedin fa-bounce fa-2x"> </i> </a>
         &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="https://github.com/shriyabi"> <i class="fa-brands fa-github fa-bounce fa-2x"></i> </a>
         <i class="fa-brands fa-google fa-bounce fa-2x" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;"></i>
 
     <script src="Home.js"> </script>
