added more social media

--- a/index.html
+++ b/index.html
@@ -430,11 +430,12 @@ elements2.forEach(fader => {
     <br>
     <div class="fade-in2 center fa-3x">
         <h2 style ="text-align: center; font-size: 1em;" id = "Contact"> Let's Connect <br> </h2> 
-        <i class="fab fa-instagram fa-bounce fa-2x" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;" > </i>
+        <a href = "https://www.instagram.com/shriya_bi/"><i class="fab fa-instagram fa-bounce fa-2x" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;" > </i></a> 
         &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="https://www.linkedin.com/in/shriya-biddala/"> <i class="fab fa-align-center fa-linkedin fa-bounce fa-2x"> </i> </a>
         &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="https://github.com/shriyabi"> <i class="fa-brands fa-github fa-bounce fa-2x"></i> </a>
+        &nbsp; &nbsp; &nbsp; &nbsp;
         <i class="fa-brands fa-google fa-bounce fa-2x" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;"></i>
 
     <script src="Home.js"> </script>
