--- a/index.html
+++ b/index.html
@@ -13,84 +13,6 @@
         href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;800&family=Poppins&family=Raleway:wght@300;400&family=Roboto+Condensed&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/fa913dc807.js" crossorigin="anonymous"></script>
-    <!-- <script>
-        const elements = document.querySelectorAll('.fade-in1');
-
-const appearOptions = {
-  root: null,
-  threshold: 1, 
-  rootMargin: "0px 0px 10px 0px"
-};
-
-const appearOnScroll = new IntersectionObserver
-  (function(
-    entries,
-    appearOnScroll
-  ){
-    entries.forEach(entry => {
-      if(!entry.isIntersecting){
-        return; 
-      } else{
-        entry.target.classList.add('appear');
-        appearOnScroll.unobserve(entry.target); 
-      }
-    });                                                           },
-appearOptions); 
-
-elements.forEach(fader => {
-  appearOnScroll.observe(fader); 
-});
-
-
-const elements1 = document.querySelectorAll('.fade-in2');
-const appearOptions1 = {
-  root: null,
-  threshold: 1, 
-  rootMargin: "0px 0px 10px 0px"
-};
-const appearOnScroll1 = new IntersectionObserver
-  (function(
-    entries,
-    appearOnScroll1
-  ){
-    entries.forEach(entry => {
-      if(!entry.isIntersecting){
-        return; 
-      } else{
-        entry.target.classList.add('appear');
-        appearOnScroll1.unobserve(entry.target); 
-      }
-    });                                                           },
-appearOptions1); 
-elements1.forEach(fader => {
-  appearOnScroll1.observe(fader); 
-});
-
-
-const elements2 = document.querySelectorAll('.fade-in3');
-const appearOptions2 = {
-  root: null,
-  threshold: 1, 
-  rootMargin: "0px 0px 10px 0px"
-};
-const appearOnScroll2 = new IntersectionObserver
-  (function(
-    entries,
-    appearOnScroll2
-  ){
-    entries.forEach(entry => {
-      if(!entry.isIntersecting){
-        return; 
-      } else{
-        entry.target.classList.add('appear');
-        appearOnScroll2.unobserve(entry.target); 
-      }
-    });                                                           },
-appearOptions2); 
-elements2.forEach(fader => {
-  appearOnScroll2.observe(fader); 
-}); 
-   </script> -->
 
     <style>
         .container {
@@ -336,24 +258,45 @@ elements2.forEach(fader => {
             box-shadow: 0 0 2em #177c96;
         }
 
-        a:link {
+        .link-orange:link {
+            color: #FB8500; 
+        } 
+
+        .link-orange:visited {
             color: #FB8500;
         }
 
-        a:visited {
-            color: #FB8500;
-        }
-
-        a:hover {
+        .link-orange:hover {
             color: #FFB703;
         }
 
-        a:active {
+        .link-orange:active {
             color: #FB8500;
         }
 
-        a:link,
-        a:visited {
+        .link-orange:link,
+        .link-orange:visited {
+            text-decoration: none;
+        }
+
+        .link-blue:link {
+            color: #dcf4fc; 
+        } 
+
+        .link-blue:visited {
+            color: #dcf4fc;
+        }
+
+        .link-blue:hover {
+            color: #023047;
+        }
+
+        .link-blue:active {
+            color: #023047;
+        }
+
+        .link-blue:link,
+        .link-blue:visited {
             text-decoration: none;
         }
 
@@ -428,31 +371,6 @@ elements2.forEach(fader => {
             visibility: visible;
         }
 
-        /*  .image-container img {
-  border-width: 1.2em;
-  background: linear-gradient(to right, #070707, #687aff);
-  box-sizing: border-box;
-  animation: 8s rotate linear infinite;
-}
-
-@keyframes rotate {
-  to {
-    transform: rotate(360deg);
-  }
-}*/
-
-        /* @keyframes rotate {
-            to {
-                transform: rotate(360deg);
-            }
-        }
-
-        .cirlce-image {
-            position: absolute; 
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-        } */
         .circle-container {
             position: relative;
             width: 17vw;
@@ -491,8 +409,6 @@ elements2.forEach(fader => {
             }
         }
 
-
-
         .box__bg {
             position: relative;
             z-index: 0;
@@ -517,7 +433,7 @@ elements2.forEach(fader => {
             background-repeat: no-repeat;
             background-size: 100%100%, 50%50%;
             background-position: 0 0, 100% 0, 100% 100%, 0 100%;
-            background-image: linear-gradient(#070707, #687aff);
+            background-image: linear-gradient(#070707, #FFFFFF);
             animation: bgRotate 4s linear infinite;
         }
 
@@ -580,12 +496,17 @@ elements2.forEach(fader => {
             /*float: left; */
         }
 
-
-        /* slideshow for projects */
+        /*slide show for awards*/
         .slideshow-container {
-            max-width: 1000px;
             position: relative;
-            margin: auto;
+            width: 85vm; 
+            margin-right: 3vm; 
+            margin-left: 3vm;
+            border-width: 1em; 
+        }
+
+        .mySlides {
+            display: none;
         }
 
         .prev,
@@ -594,11 +515,11 @@ elements2.forEach(fader => {
             position: absolute;
             top: 50%;
             width: auto;
-            margin-top: -22px;
-            padding: 16px;
-            color: #04608e;
+            margin-top: -1.4em;
+            padding: 1.4em;
+            color: #219EBC;
             font-weight: bold;
-            font-size: 18px;
+            font-size: 1.5em;
             transition: 0.6s ease;
             border-radius: 0 3px 3px 0;
             user-select: none;
@@ -609,21 +530,32 @@ elements2.forEach(fader => {
             border-radius: 3px 0 0 3px;
         }
 
-        .mySlides {
-            display: none;
-        }
-
-        .prev:hover,
-        .next:hover {
-            background-color: #011f2f;
-        }
+        /*.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+} */
+        /*.text {
+  color: #FB8500;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+.numbertext {
+  color: #FB8500;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+} */
 
         .dot {
             cursor: pointer;
             height: 15px;
             width: 15px;
             margin: 0 2px;
-            background-color: #023047;
+            background-color: rgb(197, 105, 1);
             border-radius: 50%;
             display: inline-block;
             transition: background-color 0.6s ease;
@@ -631,10 +563,9 @@ elements2.forEach(fader => {
 
         .active,
         .dot:hover {
-            background-color: #04608e;
+            background-color: #e4a403;
         }
 
-        /* Fading animation */
         .fade {
             animation-name: fade;
             animation-duration: 1.5s;
@@ -649,106 +580,13 @@ elements2.forEach(fader => {
                 opacity: 1
             }
         }
-
-
-        * {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-
-
-
     </style>
 </head>
 
 
 <body>
-    <h4> <a href="Projects.html"> PROJECTS </a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="#Awards"> HONORS </a> &nbsp;
-        &nbsp; &nbsp; &nbsp; <a href="#Contact"> CONTACT </a> </h4>
+    <h4> <a href="Projects.html" class = "link-orange"> PROJECTS </a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="#Honors" class = "link-orange"> HONORS </a> &nbsp;
+        &nbsp; &nbsp; &nbsp; <a href="#Contact" class = "link-orange"> CONTACT </a> </h4>
     <h3 style="text-align: center"> Hello! I am </h3>
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
@@ -791,62 +629,59 @@ elements2.forEach(fader => {
     </div>
 
     <br>
-<div class="slideshow-container center">
-
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <h2> Awards </h2>
-    <h3> <a href="https://www.aspirations.org/2023-national-aspirations-in-computing-award-recipients-announced/">
-                NCWIT AiC 2023 National Honorable Mention </a> </h3>
-    <p style = "text-align: center;"> Awarded to 360 women/nonbinary technology enthusiasts from all over the country who have displayed
-            exceptional achievement, aptitude, engagement, and initiative in computing. </p>
-    <p style = "color: #023047; font-size: 1em;"> 1 / 5 </p>
-   
-  </div>
-
-  <div class="mySlides fade">
-    <h2> Awards </h2>
-    <h3> <a href = "
-        https://education.ti.com/en/promotion/codescontest/2021/"> 2021 Texas Instruments Codes Contest </a> </h3>
-    <p style = "text-align: center;"> One of five teams who recieved an honorable mention in the finalist round, and selected from 64 teams
-            through four rounds of development in the contest. </p>
-    <p style = "color: #023047; font-size: 1em;"> 2 / 5 </p>
-  </div>
-
-  <div class="mySlides fade">
-    <h2> Awards </h2>
-    <h3> <a href = " https://www.aspirations.org/people/shriya-b/98595/"> NCWIT AiC 2023 Colorado Affiliate Winner </a> </h3>
-    <p style="text-align: center;"> Awarded to high achieving women/non binary tech enthusiasts in Colorado who have demonstrated a notable
-            aptitude, engagement, and achievement with computing. </p>
-    <p style = "color: #023047; font-size: 1em;"> 3 / 5 </p>
-  </div>
-
-  <div class="mySlides fade">
-    <h2> Awards </h2>
-    <h3> MHacks 2023 optiMize Social Impact Award: 3rd Place </h3>
-    <p style="text-align: center;"> Awarded $200 for our civic-engagement focused website, OneVote. </p>
-    <p style = "color: #023047; font-size: 1em;"> 4 / 5 </p>
-  </div>
-
-  <div class="mySlides fade">
-    <h2> Awards </h2>
-    <h3> Colorado Seal of Biliteracy Endorsement in Spanish </h3>
-    <p style="text-align: center;"> Awarded to students who have taken Spanish and English through Level 5 and maintained an average GPA of 3.0+ in both English and Spanish courses. </p>
-    <p style = "color: #023047; font-size: 1em;"> 5 / 5 </p>
-  </div>
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
-
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
-<br> 
+    <div class="slideshow-container center fade-in2" id="Honors">
+        <div class="mySlides fade">
+            <h2> HONORS </h2>
+            <h3 style="margin-top: -0%;"> <a href="https://www.aspirations.org/2023-national-aspirations-in-computing-award-recipients-announced/" class = "link-blue">
+                    NCWIT AiC 2023 National Honorable Mention </a> </h3>
+            <p style="text-align: center;"> Awarded to 360 women/nonbinary technology enthusiasts from all over the
+                country who have displayed
+                exceptional achievement, aptitude, engagement, and initiative in computing. </p>
+            <p style="color: #023047; font-size: 1em;"> 1 / 5 </p>
+        </div>
+        <div class="mySlides fade">
+            <h2> HONORS </h2>
+            <h3 style="margin-top: -0%;"> <a href="
+        https://education.ti.com/en/promotion/codescontest/2021/" class = "link-blue"> 2021 Texas Instruments Codes Contest </a> </h3>
+            <p style="text-align: center;"> One of five teams who recieved an honorable mention in the finalist round,
+                and selected from 64 teams
+                through four rounds of development in the contest. </p>
+            <p style="color: #023047; font-size: 1em;"> 2 / 5 </p>
+        </div>
+        <div class="mySlides fade">
+            <h2> HONORS </h2>
+            <h3 style="margin-top: -0%;"> <a href=" https://www.aspirations.org/people/shriya-b/98595/" class = "link-blue"> NCWIT AiC 2023 Colorado Affiliate Winner
+                </a> </h3>
+            <p style="text-align: center;"> Awarded to high achieving women/non binary tech enthusiasts in Colorado who
+                have demonstrated a notable
+                aptitude, engagement, and achievement with computing. </p>
+            <p style="color: #023047; font-size: 1em;"> 3 / 5 </p>
+        </div>
+        <div class="mySlides fade">
+            <h2> HONORS </h2>
+            <h3 style="margin-top: -0%; color: #dcf4fc;"> MHacks 2023 optiMize Social Impact Award: 3rd Place </h3>
+            <p style="text-align: center;"> Awarded $200 for our civic-engagement focused website, OneVote. </p>
+            <p style="color: #023047; font-size: 1em;"> 4 / 5 </p>
+        </div>
+        <div class="mySlides fade">
+            <h2> HONORS </h2>
+            <h3 style="margin-top: -0%; color: #dcf4fc;"> Colorado Seal of Biliteracy Endorsement in Spanish </h3>
+            <p style="text-align: center;"> Awarded to students who have taken Spanish and English through Level 5 and
+                maintained an average GPA of 3.0+ in both English and Spanish courses. </p>
+            <p style="color: #023047; font-size: 1em;"> 5 / 5 </p>
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+    </div>
+    <br>
 
 
     <br>
