fixed border for center

--- a/index.html
+++ b/index.html
@@ -244,9 +244,11 @@
             background-color: #023047;
             padding: 20px;
             overflow: -moz-hidden-unscrollable;
-            margin-right: 3vw;
+            /*margin-right: 3vw;*/
+            margin: auto; 
+            width: 85vw; 
             float: center;
-            margin-left: 3vw;
+            /*margin-left: 3vw;*/
             text-align: center;
         }
 
