--- a/index.html
+++ b/index.html
@@ -252,6 +252,10 @@
             text-align: center;
         }
 
+        a:link, a.visited{
+            text-decoration: none;
+        }
+
         .center:hover {
             background-color: #177c96;
             border-color: #023047;
